# es-stream-logs

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  color_mapper.py  config.json  config.py  demo-setup.sh  docker-compose.yml  es-stream-logs.py  es_stream_logs.py  kibana.py  pyproject.toml  query.py  render.py  requirements.txt  test_es_stream_logs.py  test_query.py  tinygraph.py
.github/workflows/: docker-image.yml  python.yml
render/: __init__.py  render_html.py  render_json.py
scripts/: run
static/: enhance.js  pretty.css
