[project]
name = "es-stream-logs"
version = "1.35.2"
description = " A little flask app that streams logs from Elasticsearch to you. Loads faster than Kibana, controlled via query parameters."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "elasticsearch>=8.19.1",
    "fastapi>=0.128.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
